--- a/ereuse_devicehub/documents/templates/documents/layout.html
+++ b/ereuse_devicehub/documents/templates/documents/layout.html
@@ -13,7 +13,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('Documents.static', filename='style.css') }}">
     {{ base_macros.head() }}
   </head>
